# MLOps1-TP

TP_MLOps/: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
TP_MLOps/airflow/dags/: diabetes_training_pipeline.py
TP_MLOps/dockerfiles/airflow/: Dockerfile
TP_MLOps/dockerfiles/mlflow/: Dockerfile
TP_MLOps/dockerfiles/postgres/: init-multiple-dbs.sh
TP_MLOps/src/diabetes_mlops/: __init__.py  config.py  data.py  evaluation.py  features.py  model.py  training.py
