[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-mlops-tp"
version = "0.1.0"
description = "TP MLOps incremental para clasificacion de diabetes"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]
airflow = [
  "apache-airflow==2.10.4",
  "apache-airflow-providers-postgres==5.14.0",
]

[project.scripts]
diabetes-validate-csv = "diabetes_mlops.data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
