[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-mlops-tp"
version = "0.1.0"
description = "TP MLOps incremental para clasificacion de diabetes"
requires-python = ">=3.10,<3.13"
dependencies = [
  "boto3==1.35.76",
  "joblib==1.4.2",
  "mlflow==2.18.0",
  "pandas==2.2.3",
  "psycopg2-binary==2.9.10",
  "scikit-learn==1.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]
airflow = [
  "apache-airflow==2.10.4",
  "apache-airflow-providers-postgres==5.14.0",
]

[project.scripts]
diabetes-validate-csv = "diabetes_mlops.data:main"
diabetes-train = "diabetes_mlops.training:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
